--- a/src/assets/css/base.less
+++ b/src/assets/css/base.less
@@ -1,4 +1,4 @@
-@primaryColor:#25b864;
+@primaryColor:#0060CA;
 @regularColor:#414141;
-@secondaryColor:#d9d9d9;
+@secondaryColor:#D9D9D9;
 @borderColor:#EAEAEA;
