--- a/src/theme/default/index.less
+++ b/src/theme/default/index.less
@@ -1,3 +1,9 @@
+body{
+    font-family:Helvetica Neue,Helvetica,PingFang SC,Hiragino Sans GB,Microsoft YaHei,Arial,sans-serif;
+};
+button,input,textarea{
+    font-family:Helvetica Neue,Helvetica,PingFang SC,Hiragino Sans GB,Microsoft YaHei,Arial,sans-serif;
+};
 @import './button.less';
 @import './input.less';
 @import './textarea.less';
