--- a/src/theme/default/button.less
+++ b/src/theme/default/button.less
@@ -3,15 +3,15 @@
     margin: 0;
     display: inline-block;
     -webkit-appearance: none;
-    padding: 0 30px;
+    padding: 0 40px;
     height: 40px;
-    background: #FFF;
-    border: 1px solid @secondaryColor;
+    background: @secondaryColor;
+    border: none;
+    box-sizing: border-box;
     color: @regularColor;
     outline: none;
     cursor: pointer;
     font-size: 14px;
-    border-radius:2px;
     transition: all .3s;
     &+.in-button{
         margin-left: 10px;
@@ -20,7 +20,6 @@
 
 .in-button__primary{
   background:@primaryColor;
-  border: 1px solid @primaryColor;
   color: #FFF;
   &:hover{
     opacity: .9;
@@ -47,13 +46,7 @@
     >.in-button{
         border-radius:0;
         &+.in-button{
-             margin-left: -1px;
-        }
-        &:last-child{
-             border-radius:0 2px 2px 0;
-        }
-        &:first-child{
-            border-radius:2px 0 0 2px; 
+             margin-left: -2px;
         }
     }
 }
