--- a/src/theme/default/index.less
+++ b/src/theme/default/index.less
@@ -8,4 +8,18 @@ button,input,textarea{
 @import './input.less';
 @import './textarea.less';
 @import './checkbox.less';
+@import './switch.less';
+@import './radio.less';
 @import './datepicker.less';
+@import './number.less';
+@import './tip.less';
+@import './table.less';
+@import './select.less';
+@import './tab.less';
+@import './popover.less';
+@import './dropdown.less';
+@import './form.less';
+@import './message.less';
+@import './nav.less';
+@import './pagination.less';
+@import './model.less';
