--- a/src/theme/default/button.less
+++ b/src/theme/default/button.less
@@ -5,10 +5,10 @@
     -webkit-appearance: none;
     padding: 0 40px;
     height: 40px;
-    background: @secondaryColor;
+    background: @regularColor;
     border: none;
     box-sizing: border-box;
-    color: @regularColor;
+    color: #FFF;
     outline: none;
     cursor: pointer;
     font-size: 14px;
