--- a/src/theme/default/index.less
+++ b/src/theme/default/index.less
@@ -22,4 +22,4 @@ button,input,textarea{
 @import './message.less';
 @import './nav.less';
 @import './pagination.less';
-@import './model.less';
+@import './modal.less';
