= 更换主题  美蝶绿

--- a/src/theme/default/button.less
+++ b/src/theme/default/button.less
@@ -3,12 +3,12 @@
     margin: 0;
     display: inline-block;
     -webkit-appearance: none;
-    padding: 0 40px;
+    padding: 0 20px;
     height: 40px;
-    background: @regularColor;
+    background: @defaultColor;
     border: none;
     box-sizing: border-box;
-    color: #FFF;
+    color: @regularColor;
     outline: none;
     cursor: pointer;
     font-size: 14px;
