--- a/src/theme/default/radio.less
+++ b/src/theme/default/radio.less
@@ -22,7 +22,7 @@
         position: absolute;
         left: 0;
         top: 5px;
-        //-webkit-appearance: none;
+        -webkit-appearance: none;
         outline: none;
         margin: 0;
         padding: 0;
@@ -35,8 +35,8 @@
             position: relative;
             display: inline-block;
             vertical-align: middle;
-            width: 30px;
-            height: 30px;
+            width: 24px;
+            height: 24px;
             background: #FFF;
             border: 2px solid @secondaryColor;
             border-radius:100%;
@@ -56,8 +56,8 @@
                     position: absolute;
                     display: block;
                     content: '';
-                    left: 9px;
-                    top: 9px;
+                    left: 6px;
+                    top: 6px;
                     width: 10px;
                     height: 10px;
                     border-radius:100%; 
