--- a/src/theme/default/base.less
+++ b/src/theme/default/base.less
@@ -1,5 +1,6 @@
 @primaryColor:rgba(18,170,156,1);
 @defaultColor:rgba(228,223,215,1);
+@dangerColor:rgba(252,99,21,1);
 @regularColor:#414141;
 @labelColor:#666666;
 @secondaryColor:#D9D9D9;
