--- a/src/theme/default/button.less
+++ b/src/theme/default/button.less
@@ -25,6 +25,13 @@
   background:@primaryColor;
   color: #FFF;
 }
+
+.in-button__danger{
+    background:@dangerColor;
+    color: #FFF;
+  }
+
+
 .in-button__text{
   padding: 0;
   background:transparent;
