--- a/src/assets/css/base.less
+++ b/src/assets/css/base.less
@@ -1,5 +1,6 @@
-@primaryColor:#0060CA;
+@primaryColor:rgba(18,170,156,1);
+@defaultColor:rgba(228,223,215,1);
 @regularColor:#414141;
-@labelColor:#666;
+@labelColor:#666666;
 @secondaryColor:#D9D9D9;
 @borderColor:#EAEAEA;
