--- a/src/theme/default/nav.less
+++ b/src/theme/default/nav.less
@@ -1,7 +1,7 @@
 @import './base.less';
 .in-nav{
     width: 100%;
-    background: #EEE;
+    background: #FFF;
     .in-sub-nav{
         >.in-sub-title{
             padding: 0 20px;
@@ -10,9 +10,6 @@
             cursor: pointer;
             display: flex;
             color: @regularColor;
-            &:hover{
-                background: #EAEAEA;
-            }
             >.in-sub-text{
                 flex: 1;
                 height: 50px;
@@ -54,10 +51,6 @@
         line-height: 50px;
         cursor: pointer;
         color: @regularColor;
-        transition: color .3s;
-        &:hover{
-            background: #EAEAEA;
-        }
     }
     .in-nav-active{
         color: @primaryColor;
