--- a/src/theme/default/textarea.less
+++ b/src/theme/default/textarea.less
@@ -11,7 +11,7 @@
     }
     >.in-textarea{
         box-sizing: border-box;
-        padding:10px 30px;
+        padding:10px 15px;
         width: 100%;
         min-height: 110px;
         height: auto;
@@ -21,6 +21,8 @@
         font-size: 14px;
         line-height: 24px;
         >p{
+            padding: 0;
+            margin: 0;
             word-break: break-all;
             font-size: 14px;
             color: @regularColor;
