--- a/src/theme/default/base.less
+++ b/src/theme/default/base.less
@@ -1,4 +1,4 @@
-@primaryColor:rgba(18,170,156,1);
+@primaryColor:#6ca2ff;
 @defaultColor:rgba(228,223,215,1);
 @dangerColor:rgba(252,99,21,1);
 @regularColor:#414141;
